<resources>
    <string name="app_name">StudentLife</string>

    // Navigation Drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="newsMenu">Новости</string>
    <string name="leagueMenu">Лиги</string>
    <string name="storeMenu">Магазин</string>
    <string name="settingsMenu">Настройки</string>
    <string name="nickName">Алексей Кузьменко</string>
    <string name="status">Продаю кванты. Недорого!</string>

    // Navigation drawer fragments
    <string name="news_fragment">Здесь будут новости</string>
    <string name="league_fragment">Здесь будет инфа по лигам</string>
    <string name="store_fragment">Здесь будут продаваться паленые ведомы</string>
    <string name="settings_fragment">Здесь будут настройки аккаунта</string>
    <string name="account_fragment">Здесь будет аккаутн пользователя</string>
    <string name="Description">TODO</string>
    <string name="userPhotoDescription">userPhoto</string>
    <string name="userStatus">Все вопросы по телефону +375294587016 (МТС)</string>
    <string name="newsTitle">Новости</string>

    // CardView
    <string name="default_username">Никита Быцко</string>
    <string name="posted_photo_image">posted_photo</string>
    <string name="icon">icon</string>
    <string name="postedText">5 февраля в фойе актового зала университета пройдет
                                Развлекательная программа и флешмоб
                                "Танцуем вместе с гостями". Начало в 14.00</string>
    <string name="participants">150</string>
    <string name="postedLikes">210</string>

    // User profile
    <string name="userProfileMyCompetitions">Мои мероприятия</string>
    <string name="userProfileMyRegCompetitions">Ближайшие мероприятия</string>
    <string name="userProfileStore">Магазин</string>
    <string name="userProfilep1">Пункт меню</string>
    <string name="kvants_value">48</string>
    <string name="serverWorkButton">Отправить запрос</string>
    <string name="respBody">Ответ от сервера</string>
    <string name="Leag_name">550502 CИФО</string>
    <string name="applyButton">Подать заявку</string>

    // Create League
    <string name="createLeagueButton">Создать лигу</string>
    <string name="createleaguehead">Создание новой лиги для</string>
    <string name="nameofchildleaguetextview">Введите название лиги</string>
    <string name="descrofchildleaguetextview">Краткое описание:</string>
    <string name="photoofchildleaguetextview">Выберите фото</string>
    <string name="createChildLeagueButton">Создать лигу</string>

    // RegAndAuth
    <string name="passwordTextView">Пароль</string>
    <string name="userNameTextView">Никнейм</string>
    <string name="forgetPassword">Забыли пароль?</string>
    <string name="loginButton">Войти</string>
    <string name="singUpButton">Зарегистрироваться</string>
    <string name="WelcomeLabel">Добро пожаловать в StudentLife</string>
    <string name="singUpLabel">Регистрация</string>
    <string name="loginTextView">Логин</string>
    <string name="emailTextView">Почта</string>
    <string name="secondNameTextView">Фамилия</string>
    <string name="registration_sex_m">Мужской</string>
    <string name="registration_sex_w">Женский</string>
    <string name="dateTextView">Дата рождения</string>
    <string name="firstNameTextView">Имя</string>

    // Shop
    <string name="product_name_text">Имя продукта</string>
    <string name="is_bought_text">Уже куплено</string>
    <string name="price_text">Цена:</string>
    <string name="arrow_descr">TODO</string>

    // Buy product
    <string name="buy_product_name_text">Имя продукта</string>
    <string name="buy_product_description_text">Описание продука</string>
    <string name="buy_product_league_shop_name_text">Магазин лиги:</string>
    <string name="buy_product_isBought_text">Состояние:</string>
    <string name="buy_product_price_text">Цена:</string>
    <string name="buy_product_button_text">Купить</string>
    <string name="hello_blank_fragment">hello</string>
<<<<<<< Updated upstream
=======

    <string name="send_invite">Создать мероприятие</string>
        <string name="cancelInviteButton">Отмена</string>
        <string name="nameOfTheEvent">Название мероприятия</string>
        <string name="startOfEventDate">Дата начала</string>
        <string name="startOfEventTime">Время начала</string>
        <string name="endOfEventDate">Дата конца</string>
        <string name="EndOfEventTime">Время конца</string>
        <string name="DescriptionOfEvent">Описание мероприятия</string>
        <string name="ChangeEventButton">Изменить мероприятие</string>
        <string name="eventManager">Организатор</string>
        <string name="eventDetails">Детали</string>
        <string name="your_events">Ваши мероприятия</string>
        <string name="event_template">Тестовый ивент</string>
        <string name="todo">TODO</string>
        <string name="soon_events">Ближайшие мероприятия</string>
        <string name="old_password">Старый пароль</string>
        <string name="change_user_profile_text">Изменение профиля</string>
        <string name="change_user_password_new">Новый пароль</string>
        <string name="change_user_password_new_2">Повторите новый пароль</string>
        <string name="product_name">Наименование товара</string>
        <string name="description_of_product">Описание товара</string>
        <string name="product_create">Создать товар</string>
        <string name="price_of_the_product">Цена товара</string>
>>>>>>> Stashed changes

    <string name="send_invite">Создать мероприятие</string>
        <string name="cancelInviteButton">Отмена</string>
        <string name="nameOfTheEvent">Название мероприятия</string>
        <string name="startOfEventDate">Дата начала</string>
        <string name="startOfEventTime">Время начала</string>
        <string name="endOfEventDate">Дата конца</string>
        <string name="EndOfEventTime">Время конца</string>
        <string name="DescriptionOfEvent">Описание мероприятия</string>
        <string name="ChangeEventButton">Изменить мероприятие</string>
        <string name="eventManager">Организатор</string>
        <string name="eventDetails">Детали</string>
        <string name="your_events">Ваши мероприятия</string>
        <string name="event_template">Тестовый ивент</string>
        <string name="todo">TODO</string>
        <string name="soon_events">Ближайшие мероприятия</string>
        <string name="old_password">Старый пароль</string>
        <string name="change_user_profile_text">Изменение профиля</string>
        <string name="change_user_password_new">Новый пароль</string>
        <string name="change_user_password_new_2">Повторите новый пароль</string>
        <string name="product_name">Наименование товара</string>
        <string name="description_of_product">Описание товара</string>
        <string name="product_create">Создать товар</string>
        <string name="price_of_the_product">Цена товара</string>

</resources>
