<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adapter.Shop.BuyProductActivity">


    <LinearLayout
        android:id="@+id/linear_layout_buy_product"
        android:background="@drawable/animation_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/buy_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/buy_product_name_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/buy_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/buy_product_description_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/buy_product_league_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/buy_product_league_shop_name_text"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/buy_product_isBought"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/buy_product_isBought_text"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/buy_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/buy_product_price_text"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buy_product_button"
            android:background="@drawable/selector_xml_btn_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/buy_product_button_text" />
    </LinearLayout>
</FrameLayout>