<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegAndAuth.RegistrationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/animation_list"
        android:orientation="vertical"
        android:padding="40dp"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="0dp" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/singUpLabel"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:typeface="monospace"
            tools:ignore="NewApi,UnusedAttribute" />

        <EditText
            android:id="@+id/userNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/account"
            android:ems="10"
            android:hint="@string/userNameTextView"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:drawableLeft="@mipmap/account"
            android:paddingLeft="0dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/envelope"
            android:ems="10"
            android:hint="@string/emailTextView"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:textAlignment="textStart"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:drawableLeft="@mipmap/envelope"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <EditText
            android:id="@+id/firstNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/account"
            android:ems="10"
            android:hint="@string/firstNameTextView"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:drawableLeft="@mipmap/account"
            android:paddingLeft="0dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/secondNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/account"
            android:ems="10"
            android:hint="@string/secondNameTextView"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:paddingLeft="0dp"
            tools:ignore="RtlSymmetry"
            android:drawableLeft="@mipmap/account" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/maleCheckBox"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:ems="10"
                android:onClick="onCheckboxClicked"
                android:paddingStart="0dp"
                android:text="@string/registration_sex_m"
                android:textAlignment="viewStart"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:gravity="start"
                android:paddingLeft="0dp"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/femaleCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:ems="10"
                android:onClick="onCheckboxClicked"
                android:paddingStart="0dp"
                android:text="@string/registration_sex_w"
                android:textAlignment="viewStart"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:paddingLeft="0dp"
                tools:ignore="RtlSymmetry"
                android:gravity="start" />

        </LinearLayout>


        <TextView
            android:id="@+id/dateTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/calendar"
            android:ems="10"
            android:hint="@string/dateTextView"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textColorHint="#FFF"
            android:layout_gravity="start"
            android:gravity="start"
            android:drawableLeft="@mipmap/calendar" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/lock"
            android:ems="10"
            android:hint="@string/passwordTextView"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:textColor="@android:color/white"
            android:textColorHint="#FFF"
            android:paddingLeft="0dp"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/signUpBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_xml_btn_yellow"
                android:elevation="0dp"
                android:onClick="checkLogin"
                android:text="@string/singUpButton"
                tools:ignore="OnClick,UnusedAttribute"
                android:layout_alignParentLeft="true" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>