<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegAndAuth.LogInActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/animation_list"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            android:typeface="monospace"
            tools:ignore="NewApi,UnusedAttribute" />

        <EditText
            android:id="@+id/loginTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/account"
            android:ems="10"
            android:hint="@string/userNameTextView"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:paddingLeft="0dp"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/lock"
            android:ems="10"
            android:hint="@string/passwordTextView"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:textColor="@android:color/white"
            android:textColorHint="#FFF"
            android:paddingLeft="0dp"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_xml_btn_yellow"
            android:onClick="checkLogin"
            android:text="@string/loginButton"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/forgetPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            tools:ignore="ObsoleteLayoutParam">

            <Button
                android:id="@+id/signUpBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_xml_btn_yellow"
                android:elevation="0dp"
                android:onClick="checkLogin"
                android:text="@string/singUpButton"
                tools:ignore="OnClick,UnusedAttribute"
                android:layout_alignParentLeft="true" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>